--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "shackup-v2",
+  "name": "shackup-databasing",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "mongodb": "^4.4.0"
   }
 }
